# rules_multitool

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  lockfile.schema.json  readme.md
.bcr/: config.yml  metadata.template.json  presubmit.yml
.github/: renovate.json  reviewers.json
.github/workflows/: automation-autorelease.yml  automation-autosquash.yml  ci.yml  release.yml  release_prep.sh
docs/: automation.md
examples/module/: .bazelrc  BUILD.bazel  MODULE.bazel  add_dummy_file.bzl  integration_test.sh  multitool.lock.json
examples/target-determinator/: BUILD.bazel  MODULE.bazel  WORKSPACE.bazel  multitool.lock.json
examples/workspace/: BUILD.bazel  MODULE.bazel  WORKSPACE.bazel  minimal_download_test.sh  multitool.lock.json
multitool/: BUILD.bazel  cwd.bzl  extension.bzl  multitool.bzl  workspace_root.bzl
multitool/private/: BUILD.bazel  cwd.bzl  cwd.template.bat  cwd.template.sh  lockfile.bzl  multitool.bzl  run_in.bzl  run_in.template.bat  templates.bzl  workspace_root.bzl
multitool/private/env_repo_tool_template/: BUILD.bazel.template
multitool/private/external_repo_template/: MODULE.bazel.template  WORKSPACE.bazel.template  toolchain_info.bzl.template
multitool/private/external_repo_template/linux/arm64/: BUILD.bazel.template
multitool/private/external_repo_template/linux/x86_64/: BUILD.bazel.template
multitool/private/external_repo_template/macos/arm64/: BUILD.bazel.template
multitool/private/external_repo_template/macos/x86_64/: BUILD.bazel.template
multitool/private/external_repo_template/tool/: BUILD.bazel.template  tool.bzl.template
multitool/private/external_repo_template/toolchain_type/: BUILD.bazel.template  toolchain_type.bzl.template
multitool/private/hub_repo_template/: toolchain_info.bzl.template  tools.bzl.template
multitool/private/hub_repo_tool_template/: BUILD.bazel.template  tool.bzl.template
multitool/private/tool_template/: BUILD.bazel.template  tool.bzl.template
multitool/private/workspace_hub_repo_template/: tools.bzl.template
