exports_files(
    ["multitool.lock.json"],
)

sh_test(
    name = "integration_test",
    srcs = ["integration_test.sh"],
    args = [
        "$(location @multitool//tools/target-determinator)",
    ],
    data = ["@multitool//tools/target-determinator"],
)

sh_test(
    name = "integration_test_cwd",
    srcs = ["integration_test.sh"],
    args = [
        "$(location @multitool//tools/target-determinator:target-determinator.cwd)",
    ],
    data = ["@multitool//tools/target-determinator:target-determinator.cwd"],
)
