sh_test(
    name = "integration_test",
    srcs = ["integration_test.sh"],
    args = [
        "$(location @multitool//tools/target-determinator)",
    ],
    data = ["@multitool//tools/target-determinator"],
)

sh_test(
    name = "integration_test_cwd",
    srcs = ["integration_test.sh"],
    args = [
        "$(location @multitool//tools/target-determinator:cwd)",
    ],
    data = ["@multitool//tools/target-determinator:cwd"],
)

sh_test(
    name = "integration_test_workspace_root",
    srcs = ["integration_test.sh"],
    args = [
        "$(location @multitool//tools/target-determinator:workspace_root)",
    ],
    data = ["@multitool//tools/target-determinator:workspace_root"],
)
