load("@aspect_bazel_lib//:bzl_library.bzl", "bzl_library")

exports_files([
    "run_in.template.bat",
    "run_in.template.sh",
])

bzl_library(
    name = "multitool",
    srcs = ["multitool.bzl"],
    visibility = ["//multitool:__subpackages__"],
    deps = [
        ":lockfile",
        ":templates",
        "@bazel_features//:features",
        "@bazel_tools//tools/build_defs/repo:utils.bzl",
    ],
)

bzl_library(
    name = "lockfile",
    srcs = ["lockfile.bzl"],
    visibility = ["//multitool:__subpackages__"],
)

bzl_library(
    name = "templates",
    srcs = ["templates.bzl"],
    visibility = ["//multitool:__subpackages__"],
    deps = ["@platforms//host:constraints_lib"],
)
